--- a/MoinMoin/templates/utils.html
+++ b/MoinMoin/templates/utils.html
@@ -55,7 +55,8 @@
                     title="{{ shortname }}" class="subitem-link"
                     {% if newtab %}target="_blank"{% endif %}>{{ shortname }}</a>
                 {% if has_children %}
-                    <span class="sep">/</span>
+                    <button class="expander" title="{{ _('Expand Subitem') }}"
+                        onclick="toggleSubtree(this)">/</button>
                     {{ _render_subitem_navigation_tree(theme_supp.subitem_index(fullname), newtab, parentcaller) }}
                 {% endif %}
             </li>
