--- a/MoinMoin/templates/usersettings_forms.html
+++ b/MoinMoin/templates/usersettings_forms.html
@@ -50,7 +50,7 @@
     {{ forms.render_select(gen, form['theme_name']) }}
     {{ forms.render_field(gen, form['css_url'], 'url') }}
     {{ forms.render_field(gen, form['edit_rows'], 'text') }}
-    {{ forms.render_field(gen, form['results_per_page'], 'number') }}
+    {{ forms.render_field(gen, form['results_per_page'], 'text') }}
 </dl>
 {{ forms.render_hidden('part', 'ui') }}
 {{ forms.render_button(_("Save")) }}
