--- a/MoinMoin/templates/history.html
+++ b/MoinMoin/templates/history.html
@@ -1,5 +1,8 @@
 {% extends theme("show.html") %}
 {% import "utils.html" as utils %}
+
+{% set title = _("History of '%(item_name)s'", item_name=item_name) %}
+
 {% block content %}
     {% set (history, next_offset, previous_offset) = history_page %}
     {% if history %}
@@ -11,7 +14,7 @@
             <a href="{{ url_for('frontend.history', item_name=item_name, offset=next_offset) }}" title="{{ _("Next") }}">&raquo;</a>
         {% endif %}
     </div>
-    <h1>{{ _("History of '%(item_name)s'", item_name=item_name) }}</h1>
+    <h1>{{ title }}</h1>
     <div class="moin-clr"></div>
     <form action="{{ url_for('frontend.diff', item_name=item_name) }}" method="GET">
         <div id="moin-page-history">
