--- a/MoinMoin/templates/itemviews.html
+++ b/MoinMoin/templates/itemviews.html
@@ -66,6 +66,12 @@
                 </li>
             {%- endif %}
 
+        {% if endpoint == 'special.transclusions' -%}
+            <li class="moin-transclusions-button" style="display:none;">
+            <a href="#" onClick="toggleTransclusionOverlays();return false;" title="{{ title }}">{{ label }}</a>
+            </li>
+        {%- endif %}
+
             {%- if endpoint == 'special.supplementation' %}
                 {%- for sub_item_name in cfg.supplementation_item_names %}
                     {%- set current_sub = item_name.rsplit('/', 1)[-1] %}
