Add summary meta key to items. Summary is shown on +show and +search, but not +index yet.

--- a/MoinMoin/templates/search.html
+++ b/MoinMoin/templates/search.html
@@ -37,6 +37,11 @@
                     </tr>
                     <tr>
                         <td>
+                            <p class="info searchhitinfobar">{{ _("Summary: %(summary)s", summary=result['summary']) }}</p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
                             <p class="info searchhitinfobar">{{ _("Revision: %(revid)s Last Change: %(mtime)s", revid=result['revid'], mtime=result['mtime']|datetimeformat) }}</p>
                         </td>
                     </tr>
