--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -18,15 +18,15 @@
 // user styles used by moin wiki parser (and maybe others) like red/green/solid/dashed/comment...
 @import "userstyles.css"
 
-body_color = #444444
-body_bg_color = #eeeeee
-main_bg_color = #ffffff
+font_color = #444444
+base_color = #eeeeee
+page_color = #ffffff
 border_style = 1px solid #cccccc
 header_bg_color = #eeffee
 footer_color = #888888
-panel_titles_color = #000088
+heading_color = #000088
 panel_items_color = #000000
-heading_underline_color = #4D7DA9
+border_color = #4D7DA9
 shadow_color = #444444
 
 font_family = sans-serif
@@ -48,8 +48,8 @@ content_width_with_panel = 99.8% - local_panel_width - (4 * local_padding_width)
 content_width_no_panel = 99.8% - (2 * local_padding_width)
 
 body
-    color body_color
-    background-color body_bg_color
+    color font_color
+    background-color base_color
     font-family font_family
 
 // the main elements - just the big picture first: panels, header, content, footer
@@ -67,7 +67,7 @@ body
 
 // contains header and content, but not footer
 #moin-main-box
-    background-color main_bg_color
+    background-color page_color
     border border_style
     border-radius 6px
     box-shadow 2px 2px 4px shadow_color
@@ -134,7 +134,7 @@ body
     margin 0
     li
         font-size main_font_size
-        color panel_titles_color
+        color heading_color
         font-weight bold
         padding 0.5em
         border border_style
@@ -244,7 +244,7 @@ for n in 1 2 3 4 5 6
         font-size main_font_size * scale_font
         margin (1em / scale_font) 0
         heading_underline_thickness = floor(4px - n / 2)
-        border-bottom heading_underline_thickness solid heading_underline_color
+        border-bottom heading_underline_thickness solid border_color
         padding-bottom heading_underline_thickness
 
 // special style for heading with mouseover permalinks
@@ -254,7 +254,7 @@ a.permalink
     margin-left 0.1em
     color footer_color
     &:hover
-        color body_color
+        color font_color
 
 h1:hover .permalink,
 h2:hover .permalink,
@@ -267,7 +267,7 @@ h6:hover .permalink
 
 // horizontal rule ---- and custom rules ----- to ----------
 hr
-    background-color body_color
+    background-color font_color
     border 0
     margin .9em 0
     height 1px
