--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -21,12 +21,12 @@
 font_color = #444444
 base_color = #eeeeee
 page_color = #ffffff
-border_style = 1px solid #cccccc
+border_style = 1px solid border_color
 header_bg_color = #eeffee
 footer_color = #888888
 heading_color = #000088
 panel_items_color = #000000
-border_color = #4D7DA9
+border_color = #cccccc
 shadow_color = #444444
 table_bg_color = #EEF1F5
 link_color = #47F
