Foobar theme uniform border style to all borders.

--- a/MoinMoin/themes/foobar/static/css/common.css
+++ b/MoinMoin/themes/foobar/static/css/common.css
@@ -218,15 +218,15 @@ hr.moin-hr5{height:9px}
 hr.moin-hr6{height:12px}
 table{margin:.5em;border-collapse:collapse;}
 table th,table td{padding:.3em .4em;vertical-align:middle;text-align:left}
-table th{border:1px solid #4d7da9;background-color:#81bbf2}
-table td{border:1px solid #adb9cc}
+table th{border:1px solid #ccc;background-color:#81bbf2}
+table td{border:1px solid #ccc}
 table.zebra{border:none;border-collapse:separate;border-spacing:1px;}
 table.zebra thead{background-color:#81bbf2}
 table.zebra tfoot{background-color:#c4d9ff}
 table.zebra tbody tr,table.zebra > tr{background-color:#eef1f5}
 table.zebra tbody tr:nth-child(odd),table.zebra > tr:nth-child(odd){background-color:#d9dfe8}
 table.zebra th,table.zebra td{border:none}
-pre{font-family:monospace;white-space:pre-wrap;word-wrap:break-word;border:1px solid #aebdcc;background-color:#f3f5f7;margin:.33em 0;padding:5px;clear:both;}
+pre{font-family:monospace;white-space:pre-wrap;word-wrap:break-word;border:1px solid #ccc;background-color:#f3f5f7;margin:.33em 0;padding:5px;clear:both;}
 pre.comment{background-color:#ccc;color:#f00;margin:0;padding:0;border:0;}
 pre.comment:before{content:url("../img/attention.png")}
 textarea{font-family:monospace;width:100%;border:1px solid #ccc}
