--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -300,10 +300,10 @@ table
         vertical-align middle
         text-align left
     th
-        border 1px solid #4D7DA9
+        border border_style
         background-color #81BBF2
     td
-        border 1px solid #ADB9CC
+        border border_style
 
 table.zebra
     border none
@@ -327,7 +327,7 @@ pre
     font-family monospace
     white-space pre-wrap
     word-wrap break-word
-    border 1px solid #AEBDCC
+    border border_style
     background-color #F3F5F7
     margin .33em 0
     padding 5px
