--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -190,13 +190,13 @@ a
         color active_color
         text-decoration underline
     &.moin-nonexistent:link
-        color #666
+        color nonexistent_link_color
     &.moin-nonexistent:visited
         color nonexistent_link_color
     &.moin-nonexistent:hover
         color nonexistent_hover_color
     &.moin-nonexistent:active
-        color black
+        color nonexistent_hover_color
 
 
 // lists
@@ -301,7 +301,7 @@ table
         text-align left
     th
         border border_style
-        background-color #81BBF2
+        background-color header_bg_color
     td
         border border_style
 
@@ -310,15 +310,15 @@ table.zebra
     border-collapse separate
     border-spacing 1px
     thead
-        background-color #81BBF2
+        background-color header_bg_color
     tfoot
-        background-color #C4D9FF
+        background-color base_color
     tbody tr,
     > tr
         background-color table_bg_color
     tbody tr:nth-child(odd),
     > tr:nth-child(odd)
-        background-color #D9DFE8
+        background-color table_bg_color
     th,
     td
         border none
@@ -328,13 +328,13 @@ pre
     white-space pre-wrap
     word-wrap break-word
     border border_style
-    background-color #F3F5F7
+    background-color base_color
     margin .33em 0
     padding 5px
     clear both
     &.comment
-        background-color #CCC
-        color red
+        background-color header_bg_color
+        color heading_color
         margin 0
         padding 0
         border 0
