--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -82,9 +82,12 @@ body
 
 #moin-header
     background-color header_bg_color
+    color heading_color
     border-bottom border_style
     padding 0.2% 0.5%
     overflow auto
+    a
+        color heading_color
 
 #moin-content-no-panel
     float dir
