Foobar theme color palette moved to seperate file.

--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -18,23 +18,8 @@
 // user styles used by moin wiki parser (and maybe others) like red/green/solid/dashed/comment...
 @import "userstyles.css"
 
-font_color = #000000
-base_color = #d6d5d0
-page_color = #f0f0f0
-border_style = 1px solid border_color
-header_bg_color = #2c2c2a
-footer_color = #000000
-heading_color = #ffffff
-panel_color = #2c2c2a
-border_color = #cccccc
-shadow_color = #9d9d9b
-table_bg_color = #d0d0d0
-link_color = #4fa8fa
-hover_color = #007cef
-active_color = #51d443
-visited_color = #5e84a7
-nonexistent_link_color = #f1f1f1
-nonexistent_hover_color = #ff2727
+// color have been used from the color palette 
+@import "color_palette"
 
 font_family = sans-serif
 main_font_size = 1em
