--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -43,6 +43,7 @@ body
     color font_color
     background-color base_color
     font-family font_family
+    background-image url(../img/base.png)
 
 // the main elements - just the big picture first: panels, header, content, footer
 
