Foobar theme index page filters moved to local panel

--- a/MoinMoin/themes/foobar/templates/local.html
+++ b/MoinMoin/themes/foobar/templates/local.html
@@ -12,6 +12,7 @@
 </div>
 
 <div id="moin-local-panel">
+{% block local %}
 <ul>
     <li>Views
         {% set exists = storage.has_item(item_name) %}
@@ -128,6 +129,7 @@
         {{ utils.render_subitem_navigation(item_name, False) }}
     </li>
 </ul>
+{% endblock %}
 </div>
 {% endblock %}
 
