--- a/MoinMoin/themes/foobar/templates/index.html
+++ b/MoinMoin/themes/foobar/templates/index.html
@@ -1,4 +1,4 @@
-{% extends theme("global.html") %}
+{% extends theme("local.html") %}
 {% import "forms.html" as forms %}
 {% block head_scripts %}
 {{ super() }}
@@ -6,64 +6,65 @@
     <script src="{{ url_for('static', filename='js/index_action.js') }}"></script>
 {% endblock %}
 
+{% block local %}
+    <ul>
+        {% if index %}
+        <li class="action-bar"> 
+        <div class="moin-select-all">
+            <span class="moin-select-allitem allitem-toselect" title="{{ _("Select All") }}">{{ _("Select All") }}</span>
+        </div>
+        </li>
+        {% endif %}
+        <li class="action-bar">
+        <div class="moin-select-actions">
+            <div>
+                <span class="show-action">Actions</span> 
+            </div>
+            <ul>
+                <li id="moin-create-newitem">{{ _("New item") }}</li>
+                <li id="moin-download-trigger">{{ _("Download") }}</li>
+                <li class="moin-action-tab" 
+                    id="moin-delete-trigger" 
+                    actionurl="{{ url_for('frontend.ajaxdelete', item_name=item_name) }}">
+                    {{ _("Delete") }}
+                </li>
+                <li class="moin-action-tab" 
+                    id="moin-destroy-trigger" 
+                    actionurl="{{ url_for('frontend.ajaxdestroy', item_name=item_name) }}">
+                    {{ _("Destroy") }}
+                </li>
+            </ul>
+        </div>
+        </li>
+        {% if index %}
+        <li class="action-bar">
+        <div class="moin-contenttypes-wrapper">
+            <div class="ct-hide">{{ _("Filter by content type") }}</div>
+            {% set unknown_items_label = _("items having unknown mime types") %}
+            {{ gen.form.open(form, method="post", action=url_for('frontend.index', item_name=item_name)) }}
+            <ul>
+                <li>
+                    <a href="#" class="filter-toggle">&raquo; {{ _("Toggle") }}</a>
+                    <a href="#" class="filter-more">&raquo; {{ _("More") }}</a>
+                </li>
+                {{ forms.render_filter_field(gen, form['markup_text_items'], 'checkbox', contenttype_groups['markup text items']) }}
+                {{ forms.render_filter_field(gen, form['other_text_items'], 'checkbox', contenttype_groups['other text items']) }}
+                {{ forms.render_filter_field(gen, form['image_items'], 'checkbox', contenttype_groups['image items']) }}
+                {{ forms.render_filter_field(gen, form['audio_items'], 'checkbox', contenttype_groups['audio items']) }}
+                {{ forms.render_filter_field(gen, form['video_items'], 'checkbox', contenttype_groups['video items']) }}
+                {{ forms.render_filter_field(gen, form['other_items'], 'checkbox', contenttype_groups['other items']) }}
+                {{ forms.render_filter_field(gen, form['unknown_items'], 'checkbox', unknown_items_label) }}
+                {{ gen.input(form['submit'], type='submit') }}
+            </ul>
+            {{ gen.form.close() }}
+        </div>
+        </li>
+        {% endif %}
+    </ul>
+{% endblock %}
+
 {% block content %}
     <div class="moin-index-message"><span></span></div>
-    <div class="moin-align-right">
-        <ul>
-            {% if index %}
-            <li class="action-bar">
-            <div class="moin-select-all">
-                <span class="moin-select-allitem allitem-toselect" title="{{ _("Select All") }}">{{ _("Select All") }}</span>
-            </div>
-            </li>
-            {% endif %}
-            <li class="action-bar">
-            <div class="moin-select-actions">
-                <div>
-                    <span class="show-action">Actions</span>
-                </div>
-                <ul>
-                    <li id="moin-create-newitem">{{ _("New item") }}</li>
-                    <li id="moin-download-trigger">{{ _("Download") }}</li>
-                    <li class="moin-action-tab"
-                        id="moin-delete-trigger"
-                        data-actionurl="{{ url_for('frontend.ajaxdelete', item_name=item_name) }}">
-                        {{ _("Delete") }}
-                    </li>
-                    <li class="moin-action-tab"
-                        id="moin-destroy-trigger"
-                        data-actionurl="{{ url_for('frontend.ajaxdestroy', item_name=item_name) }}">
-                        {{ _("Destroy") }}
-                    </li>
-                </ul>
-            </div>
-            </li>
-            {% if index %}
-            <li class="action-bar">
-            <div class="moin-contenttypes-wrapper">
-                <div class="ct-hide">{{ _("Filter by content type") }}</div>
-                {% set unknown_items_label = _("items having unknown mime types") %}
-                {{ gen.form.open(form, method="post", action=url_for('frontend.index', item_name=item_name)) }}
-                <ul>
-                    <li>
-                        <a href="#" class="filter-toggle">&raquo; {{ _("Toggle") }}</a>
-                        <a href="#" class="filter-more">&raquo; {{ _("More") }}</a>
-                    </li>
-                    {{ forms.render_filter_field(gen, form['markup_text_items'], 'checkbox', contenttype_groups['markup text items']) }}
-                    {{ forms.render_filter_field(gen, form['other_text_items'], 'checkbox', contenttype_groups['other text items']) }}
-                    {{ forms.render_filter_field(gen, form['image_items'], 'checkbox', contenttype_groups['image items']) }}
-                    {{ forms.render_filter_field(gen, form['audio_items'], 'checkbox', contenttype_groups['audio items']) }}
-                    {{ forms.render_filter_field(gen, form['video_items'], 'checkbox', contenttype_groups['video items']) }}
-                    {{ forms.render_filter_field(gen, form['other_items'], 'checkbox', contenttype_groups['other items']) }}
-                    {{ forms.render_filter_field(gen, form['unknown_items'], 'checkbox', unknown_items_label) }}
-                </ul>
-                {{ gen.input(form['submit'], type='submit') }}
-                {{ gen.form.close() }}
-            </div>
-            </li>
-            {% endif %}
-        </ul>
-    </div>
     <div>
     {% if item_name: %}
         <h1>{{ _("Index of subitems of '%(item_name)s'", item_name=item_name) }}</h1>
@@ -113,13 +114,13 @@
                 <a href="about:blank" title="{{ url_for('.download_item', item_name=fullname, mimetype=mimetype) }}"
                    class="moin-download-link">
                 </a>
-                <a href="{{ url_for('.show_item', item_name=fullname) }}"
+                <a href="{{ url_for('.show_item', item_name=fullname) }}" 
                    class="{{ contenttype|contenttype_to_class }} moin-item"
                    title="{{ relname }}">
                    {{ relname|truncate(maxchars, true, '..') }}
                 </a>
                 {% if hassubitem %}
-                    <a href="{{ url_for('frontend.index', item_name=fullname) }}"
+                    <a href="{{ url_for('frontend.index', item_name=fullname) }}" 
                        title="{{ _("More") }}"
                        class="moin-more-index">&nbsp;
                 </a>
@@ -132,7 +133,7 @@
     <div id="popup">
         <div id="popup-for-action" class="popup-container">
             <div class="popup-header">
-                <div class="popup-closer popup-cancel" title="{{ _("Close") }}">x</div>
+                <input type="button" class="popup-closer popup-cancel" value="{{ _("X") }}" title="{{ _("Close") }}"/>
                 <span>{{ _("Please provide comment for this action") }}</span>
             </div>
             <div class="popup-body">
@@ -145,16 +146,16 @@
         </div>
         <div id="popup-for-newitem" class="popup-container">
             <div class="popup-header">
-                <div class="popup-closer popup-cancel" title="{{ _("Close") }}">x</div>
+                <input type="button" class="popup-closer popup-cancel" value="{{ _("X") }}" title="{{ _("Close") }}"/>
                 <span>{{ _("Create new item") }}</span>
             </div>
             <div class="popup-body">
                 <form action={{ url_for('.ajaxmodify') }} method="post">
-                    <label for="moin-newitem">{{ _("Item name") }}</label>
+                    <label for="newitem">{{ _("Item name") }}</label>
                     {% if item_name %}
-                        <input type="text" id="moin-newitem" name="newitem" placeholder="{{ _("Enter item name here") }}" value="{{ item_name }}/" required="required"/>
+                        <input type="text" name="newitem" placeholder="{{ _("Enter item name here") }}" value="{{ item_name }}/" required="true"/>
                     {% else %}
-                        <input type="text" id="moin-newitem" name="newitem" placeholder="{{ _("Enter item name here") }}" required="required"/>
+                        <input type="text" name="newitem" placeholder="{{ _("Enter item name here") }}" required="true"/>
                     {% endif %}
                     <br/>
                     <input type="submit" value="{{ _("Create") }}"/>
@@ -172,4 +173,3 @@
     <script src="{{ url_for('static', filename='js/jfu.js') }}"></script>
     <div id="lightbox">&nbsp;</div>
 {% endblock %}
-
