Foobar theme form styling *** Foobar theme form styling

--- a/MoinMoin/themes/foobar/static/css/common.css
+++ b/MoinMoin/themes/foobar/static/css/common.css
@@ -169,6 +169,16 @@ body{color:#000;background-color:#d6d5d0;font-family:sans-serif;background-image
 #moin-footer ul li,#moin-credits li{padding:.1em}
 #moin-footer-logos{float:right;}
 #moin-footer-logos ul li{display:inline}
+label{display:block;font-weight:bold}
+button{background:#d6d5d0;padding:3px 5px;border:1px solid #ccc;border-radius:2px;box-shadow:1px 1px 2px #9d9d9b;cursor:pointer;}
+button:hover{box-shadow:1px 1px 2px #000}
+input,select{padding:3px;background:#f0f0f0;border:1px solid #ccc;border-radius:2px}
+input[type="text"]{width:300px}
+input[type="submit"],input[type="button"]{background:#d6d5d0}
+input.blank{border-color:#ccc;border-width:2px}
+.moin-form dd{margin-bottom:1em;}
+.moin-form dd input{width:20em}
+.moin-form dt label.required:after{content:'*';color:#000}
 a{text-decoration:none;}
 a:link{color:#4fa8fa}
 a:visited{color:#5e84a7}
